--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -8,8 +8,7 @@
       <p class="text-body fs-sm mb-5 text-white">Le JSS est un journal d’annonces légales parisien historique et MyJSS
         son prestataire de service en formalités légales des entreprises. <br />Nous accompagnons chaque jour les
         professionnels du droit et du chiffre dans toutes les étapes de la vie juridique des sociétés. <br />Notre
-        gérons
-        vos publicités légales liées à la vie sociale de votre entreprise, complexes et chronophages, afin que vous
+        gérons vos publicités légales liées à la vie sociale de votre entreprise, complexes et chronophages, afin que
         vous vous consacriez à votre cœur de métier. </p>
       <button type="button" href="#" class="btn btn-light">Nous contacter <i class="ai-arrow-right"></i></button>
     </div>
@@ -18,8 +17,7 @@
 
 <section class="pb-3">
   <div class="jarallax" data-jarallax>
-    <div class="jarallax-img d-none d-sm-block"
-      style="background-image: url(assets/img/landing/coworking-space/parallax-image.jpg);">
+    <div class="jarallax-img" style="background-image: url(assets/img/landing/coworking-space/parallax-image.jpg);">
     </div>
   </div>
 </section>
@@ -62,7 +60,6 @@
             diffuser avec objectivité l’information à tous les acteurs du monde du droit.<br><br>MyJSS répond à
             l'ensemble de vos besoins en services juridiques digitaux aujourd’hui et anticipe ceux de demain.
           </p>
-
         </div>
       </div>
     </div>
