--- a/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
@@ -21,7 +21,7 @@
 
 <section class="pb-5 my-5">
   <div class="jarallax" data-jarallax>
-    <div class="jarallax-img d-none d-sm-block" style="background-image: url(assets/img/societe/our_story_banner.png);">
+    <div class="jarallax-img" style="background-image: url(assets/img/societe/our_story_banner.png);">
     </div>
   </div>
 </section>
