--- a/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
+++ b/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
@@ -19,15 +19,16 @@
 
 <section class="pb-5 my-5">
   <div class="jarallax" data-jarallax>
-    <div class="jarallax-img d-none d-sm-block" style="background-image: url(assets/img/societe/our-team-banner.png);">
+    <div class="jarallax-img" style="background-image: url(assets/img/societe/our_team_banner.png);">
     </div>
   </div>
 </section>
 
-<section class="container mb-5">
-  <small class="mb-xl-4">NOS ÉQUIPES</small>
-  <h1 class="mb-xl-4">Découvrez nos talents par métier</h1>
-
+<section class="container overflow-hidden py-5 my-5">
+  <div class="row">
+    <p>NOS ÉQUIPES </p>
+    <h2 class="h1 pb-3 mb-lg-4 text-white">Découvrez nos talents par métier</h2>
+  </div>
   <section class="container py-5 mb-lg-3 mb-xl-4 mt-xl-3 my-xxl-5">
     <div class="row">
       <div class="col-2">
