--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -173,24 +173,46 @@
 
   <swiper-container #imagesSwiper class="imagesSwiper" init="false">
     <swiper-slide *ngFor="let image of images" class="pb-5">
-      <div class="d-flex flex-column border-0 rounded-3 h-100">
-        <div class="d-flex align-items-stretch h-100">
-          <div class="d-block gallery-item card-hover zoom-effect h-100 w-100 position-relative">
-            <div
-              class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
-            </div>
-            <div class="zoom-effect-wrapper rounded-5 h-100 w-100">
-              <img class="zoom-effect-img w-100 h-100 object-fit-cover rounded-5" [src]="image" alt="image">
-            </div>
+      <div class="d-flex align-items-stretch h-100">
+        <a class="d-block gallery-item card-hover zoom-effect h-100 w-100 position-relative" href="#"
+          data-bs-toggle="modal" data-bs-target="#imageModal" [attr.data-bs-img]="image">
+          <div
+            class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
+            <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
           </div>
-        </div>
+          <div class="zoom-effect-wrapper rounded-5 h-100 w-100">
+            <img class="zoom-effect-img w-100 h-100 object-fit-cover" [src]="image" alt="Inspiring workplace images">
+          </div>
+        </a>
       </div>
     </swiper-slide>
   </swiper-container>
+
+  <!-- Modal Bootstrap -->
+  <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" data-bs-backdrop="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body d-flex justify-content-center align-items-center">
+          <img id="modal-image" class="img-fluid w-100" src="" alt="Image">
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
+
 
 <!-- Tools-->
 <section class="container overflow-hidden my-md-3 my-lg-2 my-xl-4 my-xxl-5">
+  <p>Nos technologies et outils</p>
+  <div class="row justify-content-between">
+    <div class="col">
+      <h2 class="h1 pb-3 mb-lg-4 text-white">Une infrastructure performante </h2>
+    </div>
+  </div>
   <div class="row align-items-center my-2 py-2 py-sm-4 py-lg-5 my-xxl-2">
     <div class="col position-relative mx-auto" style="max-width: 510px;">
       <img class="d-block d-dark-mode-none" src="assets/img/landing/saas-2/tools/circle-gray-1.png"
@@ -237,8 +259,14 @@
 
 <!-- Un cadre epanouissant -->
 <section class="container py-5 my-5">
-  <div class="row mb-4">
-    <div class="col-4">
+  <p>Équilibre professionnel</p>
+  <div class="row justify-content-between">
+    <div class="col">
+      <h2 class="h1 pb-3 mb-lg-4 text-white">Un cadre épanouissant</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -248,7 +276,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -258,7 +286,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -270,7 +298,7 @@
     </div>
   </div>
   <div class="row mb-4">
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -280,7 +308,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -290,7 +318,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -302,7 +330,7 @@
     </div>
   </div>
   <div class="row mb-4">
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -312,7 +340,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-4 mb-4">
       <div class="card h-100">
         <img src="assets/img/blog/grid/01.jpg" class="card-img-top" alt="Card image">
         <div class="card-body">
@@ -322,10 +350,10 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
-      <div class="card h-100 border-0 rounded-5 yellow-card d-flex justify-content-center align-items-center">
-        <div class="card-body text-center">
-          <h2 class="blue-title">Un environnement de travail respecté et respectueux</h2>
+    <div class="col-12 col-lg-4 mb-4">
+      <div class="card yellow-card h-100 d-flex align-items-center justify-content-center">
+        <div class="text-center">
+          <h2 class="blue-title py-5 py-lg-3 px-5">Un environnement de travail respecté et respectueux</h2>
         </div>
       </div>
     </div>
