First corrections after code review. Missing standalone corrections

--- a/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
+++ b/client-myjss/src/app/modules/company/components/about-us/about-us.component.html
@@ -157,9 +157,9 @@
   <div class="row g-4 g-sm-3 g-lg-4 pb-2 pb-sm-4 pb-xl-5 mb-lg-2 mb-xl-0 mb-xxl-2">
     <div class="col-sm-5">
       <a class="d-block card-hover zoom-effect h-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
-        data-bs-img="assets/img/societe/office_panel_1.png">
-        <div
-          class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
+        (click)="openImageModal('assets/img/societe/office_panel_1.png')">
+        <div class=" d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100
+        rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
         </div>
         <div class="zoom-effect-wrapper rounded-5 h-100">
@@ -171,7 +171,7 @@
 
     <div class="col-sm-7">
       <a class="d-block card-hover zoom-effect h-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
-        data-bs-img="assets/img/societe/office_panel_2.png">
+        (click)="openImageModal('assets/img/societe/office_panel_2.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
@@ -188,7 +188,7 @@
   <div class="row g-4 g-sm-3 g-lg-4 pb-2 pb-sm-4 pb-xl-5 mb-lg-2 mb-xl-0 mb-xxl-2">
     <div class="col-sm-4 d-flex align-items-stretch">
       <a class="d-block card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal" data-bs-target="#imageModal"
-        data-bs-img="assets/img/societe/office_panel_3.png">
+        (click)="openImageModal('assets/img/societe/office_panel_3.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
@@ -202,7 +202,7 @@
 
     <div class="col-sm-3 d-flex align-items-stretch">
       <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal"
-        data-bs-target="#imageModal" data-bs-img="assets/img/societe/office_panel_4.png">
+        data-bs-target="#imageModal" (click)="openImageModal('assets/img/societe/office_panel_4.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
@@ -216,7 +216,7 @@
 
     <div class="col-sm-5 d-flex align-items-stretch">
       <a class="d-block gallery-item card-hover zoom-effect h-100 w-100" href="#" data-bs-toggle="modal"
-        data-bs-target="#imageModal" data-bs-img="assets/img/societe/office_panel_5.png">
+        data-bs-target="#imageModal" (click)="openImageModal('assets/img/societe/office_panel_5.png')">
         <div
           class="d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100 rounded-5 overflow-hidden z-2 opacity-0">
           <i class="ai-zoom-in fs-2 text-white position-relative z-2"></i>
@@ -238,7 +238,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body d-flex justify-content-center align-items-center">
-          <img id="modal-image" class="img-fluid" src="" alt="Image">
+          <img #modalImage id="modal-image" class="img-fluid w-100" src="" alt="Image">
         </div>
       </div>
     </div>
