--- a/client-myjss/src/app/modules/company/components/our-story/our-story.component.css
+++ b/client-myjss/src/app/modules/company/components/our-story/our-story.component.css
@@ -1,7 +1,7 @@
 swiper-container {
   width: 100%;
   height: 80vh;
-  /* Utilisez une unité relative pour la hauteur */
+  /* Use relative unit for height */
   display: flex;
   flex-direction: column;
 }
