--- a/client/src/app/modules/invoicing/components/outbound-check-list/outbound-check-list.component.html
+++ b/client/src/app/modules/invoicing/components/outbound-check-list/outbound-check-list.component.html
@@ -30,9 +30,9 @@
       </tr>
       <tr>
         <td>
-          <generic-toggle [(model)]="outboundCheckSearch.isHideMatchedOutboundChecks"
-            label="Masquer les chèques rapprochés" [form]="outboundCheckForm"
-            propertyName="isHideMatchedOutboundCheck"></generic-toggle>
+          <generic-toggle [(model)]="outboundCheckSearch.isDisplayNonMatchedOutboundChecks"
+            label="Afficher les chèques non rapprochés" [form]="outboundCheckForm"
+            propertyName="isDisplayNonMatchedOutboundChecks"></generic-toggle>
         </td>
       </tr>
     </table>
