last feedbacks from code review

--- a/client-myjss/src/app/modules/company/components/company/company.component.html
+++ b/client-myjss/src/app/modules/company/components/company/company.component.html
@@ -2,8 +2,8 @@
   <!-- Breadcrumb -->
   <nav aria-label="breadcrumb">
     <ol class="pt-lg-5 pb-lg-4 pb-2 breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
-      <li class="breadcrumb-item"><a href="/company/about-us">La société</a></li>
+      <li class="breadcrumb-item"><a routerLink="/">Accueil</a></li>
+      <li class="breadcrumb-item"><a routerLink="/company/about-us">La société</a></li>
       <li class="breadcrumb-item">
         <span *ngIf="selectedTab">{{ selectedTab.label }}</span>
       </li>
