--- a/client/src/app/modules/invoicing/components/bank-balance/bank-balance.component.html
+++ b/client/src/app/modules/invoicing/components/bank-balance/bank-balance.component.html
@@ -1,4 +1,4 @@
-<div class=" form-div mat-elevation-z2">
+<div class="mat-elevation-z2 form-div ">
   <div class=" full-width">
     <table class="full-width table-fixed-layout">
       <tr>
@@ -9,20 +9,11 @@
         </td>
       </tr>
     </table>
+    <sort-table [columns]="displayedColumns" (onRowClick)="selectPayments($event)" [values]="totalJssBankBalance"
+      tableName="Solde bancaire">
+    </sort-table>
+    <sort-table [columns]="displayedColumnsPayment" [values]="paymentList" *ngIf="paymentList && paymentList.length>0"
+      tableName="Solde bancaire détail">
+    </sort-table>
   </div>
 </div>
-<table mat-table matTableExporter [dataSource]="dataSource" class="mat-elevation-z8" #exporter="matTableExporter">
-  <ng-container matColumnDef="label">
-    <th mat-header-cell *matHeaderCellDef> Indicateur </th>
-    <td mat-cell *matCellDef="let element"> {{element.label}} </td>
-  </ng-container>
-  <ng-container matColumnDef="amount">
-    <th mat-header-cell *matHeaderCellDef> Montant (en &#x20AC;)</th>
-    <td mat-cell *matCellDef="let element"> {{element.amount | currency:'EUR'}} </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumnsTotal"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnsTotal;"></tr>
-</table>
-<mat-icon color="accent" class="export-icon pointer" matTooltip="Exporter en Excel"
-  (click)="exporter.exportTable('csv', {fileName:tableName, sheet: tableName, delimiter:';', bookSST :true})">file_download
-</mat-icon>
