correction of bug margin footer

--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -9,7 +9,7 @@
 
           <!-- SERVICES -->
           <div class="col-auto me-md-4">
-            <div class="lead-text-menu">
+            <div class="lead-text-menu py-4">
               SERVICES
             </div>
             <p *ngFor="let service of services">
@@ -19,7 +19,7 @@
 
           <!-- LA SOCIÉTÉ -->
           <div *ngIf="!isInNavbar" class="col-auto me-md-4">
-            <div class="lead-text-menu">
+            <div class="lead-text-menu py-4">
               LA SOCIÉTÉ
             </div>
             <p *ngFor="let companyItem of companyItems">
@@ -29,7 +29,7 @@
 
           <!-- OUTILS -->
           <div *ngIf="!isInNavbar" class="col-auto me-md-4">
-            <div class="lead-text-menu">
+            <div class="lead-text-menu py-4">
               OUTILS
             </div>
             <p *ngFor="let tool of tools">
@@ -43,7 +43,7 @@
         <div class="d-flex justify-content-between flex-column flex-md-row">
           <!-- LIENS UTILES -->
           <div class="col-auto me-md-4">
-            <div class="lead-text-menu">
+            <div class="lead-text-menu py-4">
               LIENS UTILES
             </div>
             <p>
@@ -64,7 +64,7 @@
 
           <!-- LOCALISATION -->
           <div class="col-auto me-md-4">
-            <div class="lead-text-menu">
+            <div class="lead-text-menu py-4">
               LOCALISATION
             </div>
             <p class="mb-0">10 Bd Haussmann,</p>
