corrections on services, cleaning code

--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -8,15 +8,15 @@
       <div class="col-md-6 col-xl-5 offset-xl-1">
         <p class="text-body fs-xl mb-5 text-white">Publiez vos annonces légales en ligne sur myjss.fr partout en France
           grâce à notre réseau. Profitez de l'assistance de nos experts par téléphone et par mail. </p>
-        <double-buttons orderActionLabel="Publier une annonce légale" quotationActionLabel="Demander un devis"
-          linkLabel="Consulter une annonce légale">
+        <double-buttons class="text-grey" orderActionLabel=" Publier une annonce légale"
+          quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale">
         </double-buttons>
       </div>
     </div>
   </div>
 </section>
 <section>
-  <div class="jarallax rounded overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
     <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
   </div>
 </section>
@@ -36,11 +36,11 @@
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
             <span class="text-blue opacity-70 me-2 d-none d-md-block"
               style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase">Annonce légale</span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase">Annonce légale</span>
           </div>
           <h2 class="h1 pb-2 pb-sm-3 text-blue">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Publier une annonce légale" quotationActionLabel="Demander un devis"
-            linkLabel="Consulter une annonce légale">
+          <double-buttons class="double-button-custom" orderActionLabel="Publier une annonce légale"
+            quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale">
           </double-buttons>
         </div>
       </div>
@@ -117,7 +117,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 text-center text-align-center background-yellow">
           <div class="card-body pb-3">
-            <h3 class="h4 text-blue">MYJSS <br> la plateforme intuitive et innovante pour vos démarches !</h3>
+            <h3 class="h4 text-blue">MyJSS <br> la plateforme intuitive et innovante pour vos démarches !</h3>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
