--- a/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
@@ -161,8 +161,7 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-2">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/apostilles_office.jpg"
-          alt="Image">
+        <img class="object-fit-cover w-100 h-100" src="assets/img/myjss-services/apostilles_office.jpg" alt="Image">
       </div>
       <div class="col-md-5 order-md-1">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
@@ -171,7 +170,7 @@
             sa commande en original papier. </p>
 
           <div class="mt-auto">
-            <button type="button" href="#" class="btn btn-secondary me-3 mb-2 mb-md-0">Commandez un Kbis <i
+            <button type="button" href="#" class="btn btn-light me-3 mb-2 mb-md-0">Commandez un Kbis <i
                 class="ai-arrow-right"></i>
             </button>
           </div>
