--- a/client-myjss/src/app/modules/my-services/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/domiciliation/domiciliation.component.html
@@ -16,7 +16,7 @@
   </div>
 </section>
 <section>
-  <div class="jarallax rounded overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
     <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
   </div>
 </section>
@@ -119,11 +119,11 @@
 <section class="overflow-hidden pb-5">
   <div class="container">
     <div class="row">
-      <div class="col-md-7 order-md-1">
+      <div class="col-7 order-md-1">
         <img class="object-fit-cover h-100 rounded-3" src="assets/img/myjss-services/domiciliation_office.jpg"
           alt="Image">
       </div>
-      <div class="col-md-5 order-md-2">
+      <div class="col-5 order-md-2">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
           <h2 class="mb-xl-4">Le JSS vous propose une adresse prestigieuse au cœur de Paris</h2>
           <p class="mb-4 mb-xl-5">Donnez à votre entreprise une adresse stratégique au cœur de Paris. Profitez d’une
