--- a/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column flex-md-row">
-  <button type="button" href="#" class="btn btn-secondary me-3 mb-2 mb-md-0">{{orderActionLabel}}
+  <button type="button" href="#" class="btn btn-light me-3 mb-2 mb-md-0">{{orderActionLabel}}
     <i class="ai-arrow-right"></i>
   </button>
-  <button type="button" href="#" class="btn btn-outline-secondary mb-2 mb-md-0">{{quotationActionLabel}}
+  <button type="button" href="#" class="btn btn-outline-light mb-2 mb-md-0">{{quotationActionLabel}}
     <i class="ai-arrow-right"></i>
   </button>
 </div>
