--- a/client-myjss/src/app/modules/my-services/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/my-services/explaination-video/explaination-video.component.html
@@ -1,4 +1,4 @@
-<section class=" background-blue container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5 mb-5">
+<section class="container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5 mb-5">
   <div class="text-center ">
     <h2 class=" h1 pb-2 pb-md-3 mb-lg-4 text-white">{{title}}</h2>
   </div>
