--- a/client-myjss/src/app/modules/my-services/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/formality/formality.component.html
@@ -15,7 +15,7 @@
   </div>
 </section>
 <section>
-  <div class="jarallax rounded overflow-hidden z-2" data-speed="0.5">
+  <div class="jarallax overflow-hidden z-2" data-speed="0.5">
     <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
   </div>
 </section>
