--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -44,8 +44,8 @@
             <span class="fs-xs fw-semibold text-blue text-uppercase">Annonce légale</span>
           </div>
           <h2 class="h1 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons class="custom-color" orderActionLabel="Publier une annonce légale"
-            quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale">
+          <double-buttons orderActionLabel="Publier une annonce légale" quotationActionLabel="Demander un devis"
+            linkLabel="Consulter une annonce légale">
           </double-buttons>
         </div>
       </div>
